package ee.ut.cs.shoppinglist.common

object TestTags {
    const val LOGIN_EMAIL_EDIT_TEXT = "login_email_edit_text"
    const val LOGIN_PASSWORD_EDIT_TEXT = "login_password_edit_text"
    const val LOGIN_BUTTON = "login_button"
    const val LOGIN_BUTTON_LABEL = "login_button_label"
    const val LOGIN_LOADING_INDICATOR = "login_loading_indicator"

}